# python-week-2022

./: beerlog.db  pyproject.toml
.github/: main.yaml
.github/workflows/: main.yml
beerlog/: api.py  cli.py  core.py  database.py  models.py  serializers.py
tests/: test_core.py  test_functional_api.py  test_functional_cli.py
