[tool.poetry]
name = "beerlog"
version = "0.1.0"
description = ""
authors = ["Bruno Rocha <rochacbruno@gmail.com>"]
include = ["beerlog/settings.toml"]

[tool.poetry.dependencies]
python = "^3.8"
sqlmodel = "^0.0.14"
fastapi = "^0.105.0"
typer = "^0.9.0"
rich = "^13.7.0"
dynaconf = "^3.2.4"
black = "^23.12.0"
flake8 = "^4.0.1"
uvicorn = "^0.25.0"

[tool.poetry.dev-dependencies]
ipython = "^8.2.0"

[tool.poetry.scripts]
beerlog = "beerlog.__main__:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
